tests/paczka1/fuzzy1/70946802.err
Error in line 13: aaLmBK5 A52 15,1
Error in line 11: xZk1pOTvS A508 32,1
Error in line 19: xZk1pOTvS A999 78,1
Error in line 26: A52 S754 88,3
Error in line 27: A52 A999 40,1
Error in line 28: Qu4 S754 10,4
Error in line 29: aaLmBK5 S754 60,7
Error in line 23: DbjrQ A52 42,5
